rm composer workflow

--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -17,8 +17,10 @@ jobs:
         working-directory: ./app
     steps:
       # get branch
-      - name: Get main Branch
-        uses: actions/checkout@v3
+      - name: Get production Branch
+      - uses: actions/checkout@v3
+        with:
+          ref: production
 
       # build Assets
       - name: Build Aseets
