--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -23,9 +23,9 @@ jobs:
           ref: staging
 
       # build js/css files
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: 16.x
       - run: yarn install
       - run: yarn encore production
 
@@ -78,8 +78,13 @@ jobs:
           ls -al ./
 
       # install lftp
-#      - name: Install lftp
-#        run: apt-get update && apt-get install -y lftp
+      - name: Install lftp
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y lftp
+
+      # cleanup
+#      - name: Cleanup
 
       # Sync files
 #      - name: Sync files
