--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,10 @@
         "@fontsource/roboto": "^4.5.8",
         "@fortawesome/fontawesome-free": "^6.2.1",
         "material-icons": "^1.13.1",
-        "bootstrap": "^5.2.3"
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.6.3",
+        "three": "^0.148.0",
+        "@tweenjs/tween.js": "^18.6.4"
     },
     "license": "UNLICENSED",
     "private": true,
