--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     container_name: app-nginx
     build:
       context: ./docker/nginx
+    env_file:
+      - ./app/.env
     volumes:
       - ./app/:/var/www
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -24,7 +26,7 @@ services:
     depends_on:
       - php-fpm
     ports:
-      - "80:80"
+      - "5546:80"
       - "443:443"
 
   encore:
