[WIP] Create landingpage

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -9,7 +9,7 @@ index:
     controller: App\Controller\Index::landingpage
 
 threeDimensional:
-    path: /threeDimensional
+    path: /3d
     controller: App\Controller\Index::threeDimensional
 
 flat:
