--- a/.github/workflows/buildAssets.yml
+++ b/.github/workflows/buildAssets.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 14.x
       - run: yarn install
+      - run: npx update-browserslist-db@latest
       - run: yarn encore production
       - uses: actions/upload-artifact@v2
         with:
