--- a/.github/workflows/buildAssets.yml
+++ b/.github/workflows/buildAssets.yml
@@ -10,14 +10,12 @@ jobs:
       run:
         working-directory: ./app
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
+      - uses: actions/checkout@latest
+      - uses: actions/setup-node@latest
       - run: yarn install
       - run: npm update
       - run: yarn encore production
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@latest
         with:
           name: assets
           path: app/public/build
