[Actions] Update actions versions

--- a/.github/workflows/buildAssets.yml
+++ b/.github/workflows/buildAssets.yml
@@ -10,12 +10,18 @@ jobs:
       run:
         working-directory: ./app
     steps:
-      - uses: actions/checkout@latest
-      - uses: actions/setup-node@latest
+      # see https://github.com/actions/checkout to set version
+      - uses: actions/checkout@v4
+      # see https://github.com/actions/setup-node to set version
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          check-latest: true
       - run: yarn install
       - run: npm update
       - run: yarn encore production
-      - uses: actions/upload-artifact@latest
+      # see https://github.com/actions/upload-artifact  to set version
+      - uses: actions/upload-artifact@v3
         with:
           name: assets
           path: app/public/build
