--- a/app/package.json
+++ b/app/package.json
@@ -10,16 +10,19 @@
         "@tweenjs/tween.js": "^18.6.4",
         "bootstrap": "^5.3.2",
         "core-js": "^3.23.0",
-        "file-loader": "^6.0.0",
         "jquery": "^3.6.3",
         "material-icons": "^1.13.1",
+        "monaco-editor": "^0.45.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.57.1",
         "sass-loader": "^13.0.0",
         "three": "^0.148.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0"
+        "webpack-notifier": "^1.15.0",
+        "style-loader": "^3.3.3",
+        "css-loader": "^6.8.1",
+        "file-loader": "^6.2.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -30,6 +33,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "monaco-editor-webpack-plugin": "^7.1.0",
         "stimulus-content-loader": "^4.1.0"
     }
 }
